[tool.pdm.build]
includes = [
    "toolbox",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Kaziamov", email = "kaziamov@outlook.com"},
]
requires-python = "<4.0,>=3.8.1"
dependencies = [
    "cryptography>=44.0.3",
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.40",
]
name = "hexfrost-toolbox"
version = "0.1.4b"
description = "Open source library with useful utils for fast development"
readme = "README.md"
